Exercise 1.08 Project v0.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angularapp-svc
spec:
  type: NodePort
  selector:
    app: angularapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
